Terminada funcionalidad básica de PT. Añadido inicio con info.
