# swagger_server/controllers/root_controller.py
@@ -1,0 +1,11 @@
+from typing import List
+from swagger_server.models.error import Error  # noqa: E501
+import requests
+"""
+controller generated to handled auth operation described at:
+https://connexion.readthedocs.io/en/latest/security.html
+"""
+
+def get_root():
+    """Gets root"""
+    return "Proveedor de Tracks (PT) MSVC - GB02 - Samuel Monasterio Pérez"
